data/Java/18-missing-return-value/3/[M]Error.txt
https://stackoverflow.com/questions/47567093/missing-return-statement-when-trying-to-return-a-boolean-value
Program.java:17: error: missing return statement
    }
    ^